<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#A13"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/app_name"
            android:textColor="#999"
            android:textSize="25sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descricao"
        android:textSize="20sp"
        android:textAlignment="center"
        android:padding="50sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/edAltura"
        android:hint="@string/hintAltura"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/edPeso"
        android:hint="@string/hintPeso"
        android:textAlignment="center"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/radioGroupSexo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioGroupDescricao"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_masculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo_masculino"/>

        <RadioButton
            android:id="@+id/radio_feminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo_feminino" />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#A13"
        android:onClick="calcular"
        android:text="@string/button_calcular" />

    <Button android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#A13"
        android:text="@string/button_limpar"
        android:onClick="limpar"/>

</LinearLayout>