<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25sp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/resultado" />

    <TextView
        android:id="@+id/textSituacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25sp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/situacao" />

    <TextView
        android:id="@+id/textFaixaIdeal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25sp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/faixaIdeal" />
</LinearLayout>